[gd_scene load_steps=25 format=2]

[ext_resource path="res://source/game_screen.gd" type="Script" id=1]
[ext_resource path="res://assets/chair.png" type="Texture" id=2]
[ext_resource path="res://assets/programmer.png" type="Texture" id=3]
[ext_resource path="res://assets/computer.png" type="Texture" id=4]
[ext_resource path="res://assets/room.png" type="Texture" id=5]
[ext_resource path="res://assets/programmer1.png" type="Texture" id=6]
[ext_resource path="res://assets/pc.png" type="Texture" id=7]
[ext_resource path="res://assets/pc_aura.png" type="Texture" id=8]
[ext_resource path="res://source/window.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/cup_aura.png" type="Texture" id=10]
[ext_resource path="res://assets/progress_bar_full.png" type="Texture" id=11]
[ext_resource path="res://assets/progress_bar_frame.png" type="Texture" id=12]
[ext_resource path="res://assets/cup.png" type="Texture" id=13]
[ext_resource path="res://assets/questionmark.png" type="Texture" id=15]
[ext_resource path="res://assets/bed.png" type="Texture" id=16]
[ext_resource path="res://assets/bed_aura.png" type="Texture" id=17]
[ext_resource path="res://assets/programmer_lying2.png" type="Texture" id=18]
[ext_resource path="res://assets/programmer_lying.png" type="Texture" id=19]
[ext_resource path="res://assets/programmer_lying1.png" type="Texture" id=20]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "chair",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 20 ), ExtResource( 18 ), ExtResource( 19 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 37.2673, 1305.74 )

[node name="GameScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Chair" type="AnimatedSprite" parent="."]
position = Vector2( 341.715, 730.395 )
scale = Vector2( 1.89588, 1.89588 )
frames = SubResource( 1 )
animation = "chair"

[node name="Programmer" type="AnimatedSprite" parent="."]
position = Vector2( 435.819, 658.96 )
scale = Vector2( 2.36767, 2.36767 )
frames = SubResource( 2 )
frame = 1
playing = true

[node name="ComputerDesk" type="AnimatedSprite" parent="."]
position = Vector2( 742.154, 738.846 )
scale = Vector2( 1.95478, 1.95478 )
frames = SubResource( 3 )

[node name="PC" type="TextureButton" parent="."]
margin_left = 725.344
margin_top = 494.878
margin_right = 826.344
margin_bottom = 670.878
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Window" parent="." instance=ExtResource( 9 )]

[node name="Temperature" type="TextureProgress" parent="."]
margin_left = 1413.37
margin_top = 511.189
margin_right = 1669.37
margin_bottom = 563.189
rect_rotation = 270.0
rect_scale = Vector2( 0.5, 0.5 )
min_value = 10.0
max_value = 31.0
value = 31.0
texture_over = ExtResource( 12 )
texture_progress = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cup" type="TextureButton" parent="."]
margin_left = 614.924
margin_top = 619.19
margin_right = 870.924
margin_bottom = 875.19
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 13 )
texture_hover = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bed" type="TextureButton" parent="."]
margin_left = 1107.67
margin_top = 476.49
margin_right = 1363.67
margin_bottom = 732.49
rect_scale = Vector2( 3, 1.5 )
texture_normal = ExtResource( 16 )
texture_hover = ExtResource( 17 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgrammerLying" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 1504.43, 537.334 )
scale = Vector2( 2.4864, 2.4864 )
frames = SubResource( 4 )
playing = true

[node name="GameProgress" type="ProgressBar" parent="."]
modulate = Color( 1, 0, 1, 1 )
margin_left = 30.0
margin_top = 47.0
margin_right = 235.0
margin_bottom = 61.0
rect_scale = Vector2( 3, 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameProgressLabel" type="Label" parent="GameProgress"]
margin_left = 209.0
margin_right = 249.0
margin_bottom = 14.0
text = "Game Progress"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MadnessProgress" type="ProgressBar" parent="."]
modulate = Color( 0, 1, 1, 1 )
margin_left = 28.8729
margin_top = 142.249
margin_right = 233.873
margin_bottom = 156.249
rect_scale = Vector2( 3, 3 )
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MadnessProgressLabel" type="Label" parent="MadnessProgress"]
margin_left = 209.472
margin_right = 306.472
margin_bottom = 14.0
text = "Madness"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoffeeProgress" type="ProgressBar" parent="."]
modulate = Color( 0.601563, 0.310181, 0, 1 )
margin_left = 29.3983
margin_top = 93.3811
margin_right = 234.398
margin_bottom = 107.381
rect_scale = Vector2( 3, 3 )
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoffeeProgressLabel" type="Label" parent="CoffeeProgress"]
margin_left = 209.472
margin_top = 1.0
margin_right = 306.472
margin_bottom = 15.0
text = "Coffee"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FoodProgress" type="ProgressBar" parent="."]
visible = false
modulate = Color( 1, 1, 0, 1 )
margin_left = 28.4365
margin_top = 189.064
margin_right = 233.437
margin_bottom = 203.064
rect_scale = Vector2( 3, 3 )
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoffeeProgressLabel2" type="Label" parent="FoodProgress"]
margin_left = 209.472
margin_top = 1.0
margin_right = 306.472
margin_bottom = 15.0
text = "Food"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="KinematicBody2D" parent="."]
position = Vector2( 0.547119, 537.916 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
shape = SubResource( 5 )

[node name="Top" type="KinematicBody2D" parent="."]
position = Vector2( 982.866, -3.71817 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top"]
rotation = 1.5708
shape = SubResource( 5 )

[node name="Bottom" type="KinematicBody2D" parent="."]
position = Vector2( 921.1, 928.546 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bottom"]
rotation = 1.5708
shape = SubResource( 5 )

[node name="Right" type="KinematicBody2D" parent="."]
position = Vector2( 1917.72, 578.309 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
shape = SubResource( 5 )

[node name="WaspGenerator" type="Position2D" parent="."]
position = Vector2( 1681.48, 441.837 )

[node name="Questionmark" type="TextureRect" parent="."]
visible = false
margin_left = 707.099
margin_top = 344.348
margin_right = 963.099
margin_bottom = 600.348
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="PC" to="." method="_on_PC_pressed"]
[connection signal="pressed" from="Window" to="." method="_on_Window_pressed"]
[connection signal="pressed" from="Cup" to="." method="_on_Cup_pressed"]
[connection signal="pressed" from="Bed" to="." method="_on_Bed_pressed"]
